# spotify-tagger

./: .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2023-06-25-204619_create_tags/: up.sql
migrations/2023-06-25-204940_create_songs/: up.sql
migrations/2023-06-25-205145_create_songtags/: down.sql  up.sql
src/: main.rs  routes.rs
src/database/: db.rs  mod.rs  models.rs  schema.rs
src/tagger/: routes.rs
