[package]
name = "spotify-tagger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
actix-web = "4"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
